Increased overall coverage to 85% (according to Jacoco) and refactored and rearranged some tests to improve readablity